ios bug squash

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+input[type="number"],
+textarea {
+	font-size: 16px;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
